Fixed html element so content doesn't jump when vert scrollbar appears/disappears

--- a/src/assets/styles/scss/components/_image.scss
+++ b/src/assets/styles/scss/components/_image.scss
@@ -33,8 +33,9 @@
     // Image element within the image container
     .image > img {
         @include size( 100% );
-        position:               absolute;
         display:                block;
+        position:               absolute;
+        z-index:                0;
     }
 
 
